force-app/main/core/objects/Noda_Custom_Settings__c/Noda_Custom_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Noda Custom Settings</label>
</CustomObject>