force-app/main/core/objects/Noda_Custom_Settings__c/fields/Jira_Api_Token__c.field-meta.xml
<CustomField>
    <fullName>Jira_Api_Token__c</fullName>
    <label>Jira Api Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>