force-app/main/core/objects/Noda_Custom_Settings__c/fields/Jira_Project_Key__c.field-meta.xml
<CustomField>
    <fullName>Jira_Project_Key__c</fullName>
    <label>Jira Project Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>