force-app/main/core/objects/Noda_Custom_Settings__c/fields/Jira_Url__c.field-meta.xml
<CustomField>
    <fullName>Jira_Url__c</fullName>
    <label>Jira Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>