force-app/main/core/objects/Noda_Custom_Settings__c/fields/Jira_Username__c.field-meta.xml
<CustomField>
    <fullName>Jira_Username__c</fullName>
    <label>Jira Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>