force-app/main/core/objects/Noda_Custom_Settings__c/fields/Org_URL__c.field-meta.xml
<CustomField>
    <fullName>Org_URL__c</fullName>
    <label>Org URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>