force-app/main/core/objects/Noda_Custom_Settings__c/fields/Standard_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Standard_Opportunity__c</fullName>
    <label>Standard Opportunity</label>
    <type>TextArea</type>
</CustomField>