force-app/main/core/objects/Noda_Custom_Settings__c/fields/Upsale_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Upsale_Opportunity__c</fullName>
    <label>Upsale Opportunity</label>
    <type>TextArea</type>
</CustomField>